modal overflow fix

--- a/less/selfedge/selfedge-elements.less
+++ b/less/selfedge/selfedge-elements.less
@@ -760,6 +760,7 @@ button.btn-heading {
 
 .modal-content {
 	border: none;
+	overflow: hidden;
 }
 
 
